ejercicio4 funciona.